--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,19 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">All Posts</a>
         </li>
+	<!-- Eumelnet Links -->
+        <li class="nav-item">
+          <a class="nav-link" href="{{"https://blog.eumel.de" | relative_url }}">Eumel Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"https://k8sblog.eumel.de" | relative_url }}">K8S Eumel Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"https://unsupported.eumel.de" | relative_url }}">Unsupported</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"https://www.suedstrasse11.de" | relative_url }}">Südstrasse</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/links" | relative_url }}">Links</a>
         </li>
