--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <meta property="og:image" content="{{ site.url }}{{ page.twitter | relative_url}}" />
   <meta property="og:image:height" content="1200" />
   <meta property="og:image:width" content="628" />
+  <meta property="twitter:image" content="{{ page.background }}" />
   <meta property="twitter:card" content="summary_large_image" />
 
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
