--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,23 +5,23 @@ layout: default
 <!-- Page Header -->
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
-  <header class="masthead">
-    {% endif %}
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>{{ site.title }}</h1>
-            {% if site.description %}
-            <span class="subheading">{{ site.description }}</span>
-            {% endif %}
-          </div>
+{% else %}
+<header class="masthead">
+{% endif %}
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="page-heading">
+          <h1>{{ site.title }}</h1>
+          {% if site.description %}
+          <span class="subheading">{{ site.description }}</span>
+          {% endif %}
         </div>
       </div>
     </div>
-  </header>
+  </div>
+</header>
 
 <!-- Search Engine -->
 <div class="container">
@@ -35,28 +35,21 @@ layout: default
     </div>
 </div>
 
-  <!-- posts in categories -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-	      {% for tag in site.tags %}
- 		 <h3>Kategorie: {{ tag[0] }}</h3>
-		  <ul>
-  		  {% for post in tag[1] %}
-		  <li><a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">{{ post.title }}</li>
-   		 {% endfor %}
-		  </ul>
-		{% endfor %}
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+    <b>Tags :</b>
+        {% for tag in site.tags %}
+        <a href="tags/{{ tag[0] }}">{{ tag[0] }}</a> |&nbsp;
+        {% endfor %}
     </div>
   </div>
+</div>
 
- <!-- posts in a list
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
 
-        {{ content }}
 
         <!-- Home Post List -->
         {% for post in site.posts limit : 5 %}
@@ -94,4 +87,3 @@ layout: default
       </div>
     </div>
   </div>
--->
