--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,6 @@
 .highlight .hll { background-color: #404040 }
-.highlight  { background: #202020; color: #d0d0d0; padding: .3em }
+.highlight  .xx { display: block; background: #1e1e1e; color: #dcdcdc; font-family: Consolas, Menlo, Monaco, "Courier New", monospace; padding: 0.5em 0.75em; border-radius: 4px; overflow-x: auto }
+.highlight  { background: #202020; color: #d0d0d0; padding: .2em; border-radius: 2px; border-style: solid; border-width: .1em }
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .g { color: #d0d0d0 } /* Generic */
