--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,4 +1,5 @@
 // Import Core Clean Blog SCSS
 // https://startbootstrap.com/theme/clean-blog
 // https://github.com/StartBootstrap/startbootstrap-clean-blog
-@import "../assets/startbootstrap-clean-blog//css/styles.css";
+//@use "../assets/startbootstrap-clean-blog/css/styles.css" as *;
+//@import "../assets/startbootstrap-clean-blog/css/styles.css";
