feat: add custom styles and backgrounds for blog posts
This commit introduces a new stylesheet (eumelnet.css) that
overwrites styles from the startbootstrap-clean-blog theme.
Additionally, background images are set for multiple blog posts
to enhance the visual appeal of the site.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,13 @@
 ---
 layout: default
-background: '/images/blog-polar-eumel.png'
 ---
 
 <!-- Page Header -->
-{% if site.background %}
+{% if page.background %}
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+{% else %}
 <header class="masthead" style="background-image: url('{{ site.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
-  <header class="masthead">
-    {% endif %}
+{% endif %}
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
